<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".fragment.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:orientation="vertical">

        <TextView
            android:layout_marginStart="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/str_email_address"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Dosamarvis@gmail.com"
            android:textColor="@color/black"
            android:textColorHint="#696969"
            android:textSize="17sp" />

        <TextView
            android:layout_marginStart="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/str_phone_number"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="+998 99 046 6901"
            android:textColor="@color/black"
            android:textColorHint="#696969"
            android:textSize="17sp" />

        <TextView
            android:layout_marginStart="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/str_password"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="* * * * * * * *"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="#696969"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/str_forgot_password"
            android:textColor="@color/brown"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="30dp"
        android:gravity="bottom">

        <Button
            android:id="@+id/b_register"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginHorizontal="50dp"
            android:background="@drawable/view_button_brown_rounded"
            android:text="@string/str_register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp" />

    </LinearLayout>

</FrameLayout>