<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_background_grey"
    android:backgroundTint="@color/light_background_grey"
    tools:context=".fragment.FavouriteFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:gravity="top"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_arrow_back_order"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="50dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="74dp"
            android:gravity="center_horizontal"
            android:text="@string/str_orders"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_korzinka"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/korzinka" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/str_no_orders_yet"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:singleLine="false"
            android:text="@string/str_hit_the_orange"
            android:textColor="@color/grey"
            android:textSize="17sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/b_start_ordering"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/view_button_brown_rounded"
            android:text="@string/str_start_ordering"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp" />

    </LinearLayout>

</FrameLayout>