<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_background_grey"
    android:backgroundTint="@color/light_background_grey"
    tools:context=".fragment.CartFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="top"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_arrow_back_cart"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="50dp"
                android:src="@drawable/ic_baseline_arrow_back_ios_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="74dp"
                android:gravity="center_horizontal"
                android:text="@string/str_cart"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="60dp"
            android:gravity="center_horizontal">


            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/im_swipe_delete" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/str_swipe_item_to_delete"
                android:textColor="@color/black"
                android:textSize="10sp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_cart"
            tools:listitem="@layout/item_cart_layout"
            android:layout_marginTop="20dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_marginBottom="110dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


    </LinearLayout>

    <LinearLayout
        android:gravity="bottom"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/b_complete_order"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/view_button_brown_rounded"
            android:layout_marginHorizontal="50dp"
            android:text="@string/str_complete_order"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp"/>

    </LinearLayout>


</FrameLayout>